# preseea_analysis

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: add_assets.yml
data/: .~lock.CBase de datos_PRESEEA.xlsx#
notebooks/: ESTUDIO_ASL_PYTHON_ACTUALIZADO.ipynb  bidirectional_plot.ipynb  first.ipynb  sociologico.ipynb
